docs: Fable review of the JDK 25 IR E2E
Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>